Tweat scrollbar position to avoid overlap

--- a/templates/app.css
+++ b/templates/app.css
@@ -45,12 +45,15 @@ html, body {
   flex: 1;
   display: flex;
   flex-flow: column nowrap;
+  position: relative;
+  right: -10px;
 }
 
 .ps-Pokesearch__header {
   background: linear-gradient(hsla(0, 0%, 98%, 1) 75%, hsla(0, 0%, 98%, 0) 100%);
   padding-bottom: 20px;
   z-index: 5;
+  max-width: 480px;
 }
 
 .ps-SearchBar {
@@ -83,10 +86,11 @@ html, body {
 
 .ps-PokemonList {
   position: relative;
-  padding-top: 30px;
-  top: -30px;
+  padding-top: 20px;
+  top: -20px;
   flex: 1;
   overflow-y: auto;
+  width: 500px;
 }
 
 .ps-PokemonCard {
